chore: refactor security
