# src/main/java/neocode/formekouapi/endpoint/rest/controller/UserController.java
@@ -1,30 +1,27 @@
 package neocode.formekouapi.endpoint.rest.controller;
 
 import lombok.RequiredArgsConstructor;
-import neocode.formekouapi.exception.AccessDeniedException;
+import neocode.formekouapi.endpoint.rest.mapper.UserMapper;
+import neocode.formekouapi.endpoint.rest.model.User;
 import neocode.formekouapi.exception.NotFoundException;
-import neocode.formekouapi.model.User;
-import neocode.formekouapi.security.FirebaseAuthentication;
 import neocode.formekouapi.service.UserService;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RestController;
-
-import java.util.List;
+import org.springframework.web.bind.annotation.*;
 
 @RestController
 @RequiredArgsConstructor
 public class UserController {
     private final UserService userService;
-
-    //TODO
-    @GetMapping("/users")
-    public List<User> getAllUsers(FirebaseAuthentication authentication){
-        throw new AccessDeniedException();
-    }
+    private final UserMapper mapper;
 
     @GetMapping("/users/{userId}")
     public User getUserById(@PathVariable String userId){
-        return userService.getUserById(userId).orElseThrow(NotFoundException::new);
+        return mapper.toRest(
+                userService.getUserById(userId).orElseThrow(NotFoundException::new
+        ));
+    }
+
+    @PutMapping("/users")
+    User updateProfile(@RequestBody User user){
+        return mapper.toRest(userService.updateProfile(mapper.toDomain(user)));
     }
 }
